# rustyglm

./: .Rbuildignore  .gitattributes  .gitignore  CHANGELOG.md  DESCRIPTION  NAMESPACE  README.md
R/: extendr-wrappers.R  methods.R  rustyglm.R  rustyglm_credibility.R  rustyglm_smurf.R
benchmarks/: bench_fremtpl2.R  bench_methods.R  bench_parallel_real.R  bench_smurf.R
man/: glm_fit_poisson.Rd  rustyglm.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  rustyglm-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs  smurf.rs
